Revision history for local::lib

1.004002 2009-06-15
        - Fixed up INC untaint procedure to skip/ignore CODE, ARRAY, blessed entries.
        - Include test in xt/ for the above

        - Put PERL5LIB first, so it'll be favored over privlibexp and
          archlibexp when self contained.
        - Automatically untaint @INC (t0m)
        - Prevent @INC from growing when you have multiple scripts using
          --self-contained called from inside one another. (grink by way of t0m)
        - eg/scripted_install.pl now no longer requires TARGET, but still
          respects it. (confound)

1.004001 2009-05-21
        - Clean up CPAN.pm's environment variable the same way we do for
          CPANPLUS. Add an example program showing local::lib employed
          programmatically (confound).

        - Add the beginnings of a troubleshooting section (pattern).

1.004000 2009-05-14
        - Don't allow dangerous settings for CPAN.pm that affect where CPAN
          installs stuff, as this conflicts with what we're trying to do.

        - Make sure that our Makefile is written to the correct directory when
          bootstrapping (confound).

1.003004 2009-05-12
        - Additional documentation and examples concerning having multiple
          local::lib enviornments (amiri)

        - Some install tests courtesy of Hans Dieter Pearcey <hdp@cpan.org>.
          Thanks!

1.003003 2009-04-09
        - Expose the internals per RT #36846.
        - Fix the MANIFEST up a bit.

1.003002 2009-02-25
        - Add a doc patch from Torsten Raudssus <torsten@raudssus.de> that
          clarifies how to specify a directory other than ~/perl5.

1.003001 2009-01-14
        - Properly bail if given fancy dashes obtained by copy-pasting from a
          UTF8-happy POD formatter. This will bail in both the Makefile.PL and
          in local::lib::import().

1.003000 2009-01-13
        - Add the --self-contained flag from Mark Stosberg, which also contains